--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -111,19 +111,6 @@
     "tabTitle2": "Line 2",
     "tabTitle3": "Line 3"
   },
-  "nav": {
-    "home": "Home",
-    "takeAction": "Take Action",
-    "news": "News",
-    "agaarNeg": "AGAAR NEG",
-    "aboutUs": "About Us",
-    "protect": "Protect",
-    "volunteer": "Volunteer",
-    "download": "Download",
-    "more": "More",
-    "connect": "Connect",
-    "donate": "Donate"
-  },
   "hero": {
     "title": "TAKE ACTION",
     "description": "Tackling air pollution starts with each and every one of us. Learn about the actions you can take to reduce your emission and protect the health of your loved ones.",
@@ -164,47 +151,9 @@
     "validEmail": "Please enter a valid email",
     "placeholder": "Your E-mail...",
     "placeholder1": "Join our email list",
-    "footerPlaceHolder":"Enter your email to receive our newsletters"
+    "footerPlaceHolder": "Enter your email to receive our newsletters"
   },
-  "footer": {
-    "subfooter": "Stay connected:",
-    "title":{
-      "explore": "explore",
-      "getInvolved":"getInvolved",
-      "aboutUs":"About Us"
-    },
-    "nav": {
-      "home": "home",
-      "action": "take action",
-      "news": "news",
-      "agaarNeg": "AGAAR NEG",
-      "about": "about us",
-      "waysToDonate": "Ways to Donate",
-      "ourStory": "Our Story",
-      "impact":"Impact",
-      "ourTeam": "Our Team", 
-      "paypalDonate": "Donate on PayPal",
-      "givebutterDonate": "Donate on Givebutter",
-      "donatefb": "donate on Facebook",
-      "startFundraiser": "start a facebook fundraiser",
-      "shop": "shop on AmazonSmile",
-      "employerDonate": "Employer Donation on YourCause",
-      "employerDonate2": "Employer Donation on Benevity",
-      "volunteer": "volunteer",
-      "askQuestion": "ask a question",
-      "shareKnowledge": "share a knowledge",
-      "becomeVolunteer": "become a volunteer",
-      "download": "Download",
-      "iqApp": "IQAir app",
-      "followUs": "Follow Us:",
-      "join": "join the conversation"
-
-    },
-    "disclosure": "Breathe Mongolia - Clean Air Coalition nonprofit (“NGO”) seeks to inform and guide the public to research and learn about health-protecting and pollution-reducing solutions based on publicly available information. The NGO is not endorsing any specific resource and cannot validate or guarantee the effectiveness of the resources. Under no circumstances will the NGO be held liable whatsoever for any claims, damages, losses, expenses, or costs raised from the consumer’s choice. We advise consumers to conduct their own research and consult with industry experts before purchasing products and services.",
-    "name": "Breathe Mongolia - Clean Air Coalition is a 501(c)3 nonprofit in the US (Agaariin Kharuul nonprofit in Mongolia).",
-    "copyright": " Breathe Mongolia - Clean Air Coalition, Inc. All Rights Reserved",
-    "responsible": "Breathe Mongolia is not responsible for the content of external sites."
-  },
+  "footer": {},
   "join": {
     "title": "Join Our Cause",
     "description": "Our work depends on the hard-working, genuine volunteers that dedicate their time to the organization. Sign up to volunteer!",
@@ -255,34 +204,7 @@
     "uvs": "Uvs",
     "zavkhan": "Zavkhan"
   },
-  "map": {
-    "outdoor": "Outdoor sensors",
-    "outdoorlabel": "monitoring outdoor air quality",
-    "indoorlabel": "monitoring indoor air quality",
-    "indoor": "Indoor sensors",
-    "satellite": "Satellite",
-    "streets": "Street",
-    "aqiShort": "AQI",
-    "whatZone": "What Zone Am I In?",
-    "zoneDesc": "Click on a zone to see which air quality improvement zone you are in.",
-    "pinTitle": "Click on a pin",
-    "pinDesc": "<strong>Click on a pin</strong> to <strong>select a station</strong> to check air quality",
-    "aqi": "Air Quality Index",
-    "zone": "Zone",
-    "zones": "Zones",
-    "aqiTitle": "Air Quality Index Key",
-    "healthy": "Healty",
-    "moderate": "Moderate",
-    "unhealthySensitive": "Unhealthy For Sensitive Groups",
-    "unhealthy": "Unhealthy",
-    "veryUnhealthy": "Very Unhealthy",
-    "hazardous": "Hazardous",
-    "zone0": "Unapproved Zone. Phase out raw coal",
-    "zone1": "Phase out raw coal",
-    "zone23": "Connecting to grid soon, burn improved coal until then",
-    "zone4": "Have to use electricity, No burning",
-    "selectProvince": "Select a city/province"
-  },
+  "map": {},
   "actionShareEmail": {
     "subject": "Take action against air pollution in Mongolia",
     "bodyPart1": "I just pledged to",
@@ -407,21 +329,7 @@
     "Khan Uul": "Хан Khan Uul",
     "Nalaikh": "Nalaikh"
   },
-  "home": {
-    "campaignWork": {
-      "seeMore": "See more"
-    },
-    "joinBm": {
-      "opportunities": "Open positions",
-      "applyNow": "Apply Now"
-    },
-    "takeAction": {
-      "title": "Take Action"
-    },
-    "news": {
-      "title": "News"
-    }
-  },
+  "home": {},
   "news": {
     "title": "News",
     "featuredNews": "Featured news",
