--- a/public/locales/mng.json
+++ b/public/locales/mng.json
@@ -367,11 +367,7 @@
   "givebutter": {
     "support": "Хандивлах"
   },
-  "error": {
-    "oops": "Уучлаарай !",
-    "text": " Хайлт илэрцгүй.",
-    "return": "Нүүр хуудас руу буцах"
-  },
+  "error": {},
   "search": {
     "results": "илэрц олдлоо"
   }
