--- a/public/locales/en/home.json
+++ b/public/locales/en/home.json
@@ -7,7 +7,8 @@
     "applyNow": "Apply Now"
   },
   "takeAction": {
-    "title": "Take Action"
+    "title": "Take Action",
+    "seeMore": "See more"
   },
   "news": {
     "title": "News"
