--- a/public/locales/mn/home.json
+++ b/public/locales/mn/home.json
@@ -7,7 +7,8 @@
     "applyNow": "АНКEТ БӨГЛӨХ"
   },
   "takeAction": {
-    "title": "Таны оролцоо"
+    "title": "Таны оролцоо",
+    "seeMore": "Бүгд"
   },
   "news": {
     "title": "Мэдээ"
