minor: added translations for the about us page

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -10,35 +10,7 @@
     "ourTeam": "Our Team",
     "supportUs": "Support Us"
   },
-  "aboutUs": {
-    "ourMission": "Our Mission",
-    "missionStatement": "Our mission is to arm people with the resources to end air pollution in Mongolia",
-    "ourVision": "Our Vision",
-    "visionStatement": "Our vision is clean, sustainable and prosperous Mongolia",
-    "whatWeDo": "What We Do",
-    "whatWeDoDescription": "We create bilingual digital space and set of tools to address the lack of a centralized source for quality information and insight to the current conditions in Mongolia by focusing on:",
-    "education": "Education",
-    "educationDescription": "We educate the public so they can protect themselves and reduce emissions",
-    "building": "Community",
-    "buildingDescription": "We build a community of professionals and allies working to reduce air pollution",
-    "monitoring": "Watchdog",
-    "monitoringDescription": "We monitor policies and decisions to inform the public and to promote accountability",
-    "why": "Why",
-    "whyDescription": "The right to breathe clean air is a fundamental human right. We deserve to live long and healthy lives with our loved ones in our homeland.",
-    "ourAlignment": "Our Alignment to Sustainable Development Goals",
-    "ourAlignmentDescription": "Our work contributes to the Sustainable Development Goals (SDG) put forth by the United Nations. Specifically, we align with and seek to impact the following 7 SDGs and their targets:",
-    "vision": "Breathe Mongolia Mongolian Sustainable Development Vision 2030",
-    "visionDescription": "Breathe Mongolia’s work supports 3 out of the 10 goals set forth by Mongolia Sustainable Development Vision 2030, which includes:",
-    "goal6KeyWord": "Improve",
-    "improveEnvironment": "the living environment of the Mongolian people",
-    "improveEnvironmentDetails": "to lead a healthy and long life; increase life expectancy at birth to 78 years",
-    "goal8KeyWord": "Preserve",
-    "preserveBalance": "ecological balance",
-    "preserveBalanceDetails": "and to be placed among first 30 countries on the rankings of the countries by the Green economy index in the world",
-    "goal10KeyWord": "Build",
-    "buildGovernance": "professional, stable and participative governance,",
-    "buildGovernanceDetails": "free of corruption that is adept at implementing development policies at all levels."
-  },
+  "aboutUs": {},
   "ourStory": {
     "title": "Our Story",
     "ourStoryDetails": "Young Mongols decided to organize a protest in New York City, raising awareness about the deadly air pollution in Mongolia under #BreatheMongolia hashtag. The protest inspired other concerned Mongols and global citizens across the world and our founders met and created Breathe Mongolia - Clean Air Coalition nonprofit. Now, Breathe Mongolia platform serves as a central collaboration, watchdog and knowledge center hub for the fight against air pollution in Mongolia, run by volunteers in 10 countries from diverse professions such as atmospheric chemist, software engineer, urban planner, medical doctor and policy analyst. We are determined to bring all the stakeholders together and equip them with tools to eliminate the source of pollution in our homeland.",
