--- a/public/locales/mng.json
+++ b/public/locales/mng.json
@@ -10,35 +10,7 @@
     "ourTeam": "Манай хамт олон",
     "supportUs": "Биднийг дэмжих"
   },
-  "aboutUs": {
-    "ourMission": "Бидний зорилго",
-    "missionStatement": "Бидний эрхэм зорилго бол иргэдийг Монгол орны агаарын бохирдлыг бууруулах хэрэгслээр хангах явдал юм",
-    "ourVision": "Алсын хараа",
-    "visionStatement": "Бидний алсын хараа нь цэвэр, тогтвортой, цэцэглэн хөгжиж буй Монгол улс юм",
-    "whatWeDo": "Бидний үйл ажиллагаа",
-    "whatWeDoDescription": "Бид Монгол орны өнөөгийн нөхцөл байдлын талаарх чанартай мэдээлэл, ойлголтын дутагдлыг арилгахын тулд, хоёр хэлээр дижитал орон зайнд төвлөрсөн эх үүсвэр, мөн багаж хэрэгслийг бүтээж байна. Ингэхдээ дараах талбар дээр төвлөрч ажиллаж байгаа билээ. Үүнд:",
-    "education": "Боловсрол",
-    "educationDescription": "Олон нийтэд агаарын бохирдлын талаар болон үүнээс хэрхэн ѳѳрсдийгѳѳ хамгаалах талаар мэдлэг олгох",
-    "building": "Хамтын ажиллагаа",
-    "buildingDescription": "Aгаарын бохирдлын бууруулах ажил хийж буй мэргэжилтнүүд болон зорилго нэгтнүүдийн хамтын ажиллагааг дэмжих",
-    "monitoring": "Хяналт",
-    "monitoringDescription": "Гаргасан бодлого, журамд хөндлөнгийн хяналт тавьж олон нийтэд танилцуулж хариуцлагын тогтолцоог сайжруулах",
-    "why": "Яагаад энэ ажлыг хийх болов?",
-    "whyDescription": "Цэвэр агаараар амьсгалах нь хүний үндсэн эрх юм. Бид эх орондоо хайртай хүмүүстэйгээ урт удаан, элэг бүтэн, эрүүл энх амьдармаар байна.",
-    "ourAlignment": " Бидний ажил Тогтвортой xөгжлийн хүрээнд:",
-    "ourAlignmentDescription": "Бидний үйл ажиллагаа НҮБ-аас дэвшүүлсэн Тогтвортой хөгжлийн зорилгууд (SDG) -д хувь нэмэр оруулж байгаа. Тодруулбал, бид дараах 7 зорилгуудтай үйл ажиллагаагаа уялдуулж, хувь нэмрээ оруулахын тѳлѳѳ зүтгэн ажиллаж байна.",
-    "vision": "Монгол Улсын Тогтвортой xөгжлийн зорилт 2030 ",
-    "visionDescription": "Breathe Mongolia нь Монгол Улсын Tогтвортой xөгжлийн зорилт 2030-аас дэвшүүлсэн арван зорилтын гурвыг нь дэмжин ажиллаж байна. Үүнд:",
-    "goal6KeyWord": "Амьдрах орчинг",
-    "improveEnvironment": "сайжруулах",
-    "improveEnvironmentDetails": "улмаар Монголчуудын эрүүл, урт удаан амьдрах, дундаж наслалтыг 78 болгон нэмэгдүүлэх",
-    "goal8KeyWord": "Экологийн тэнцвэр",
-    "preserveBalance": "хадгалах",
-    "preserveBalanceDetails": "Дэлхийн Ногоон эдийн засгийн үзүүлэлтээр (индексээр) эхний 30-д орж буй улс орнуудын нэг болох ",
-    "goal10KeyWord": "Сайн засаглал",
-    "buildGovernance": "бий болгох",
-    "buildGovernanceDetails": "Мэргэжлийн, тогтвортой, идэвхи оролцоотой, хөгжлийн бодлогыг бүх түвшинд хэрэгжүүлэх чадвартай мѳн авилгалаас ангид засаглал"
-  },
+  "aboutUs": {},
   "ourStory": {
     "title": "Бидний түүх",
     "ourStoryDetails": "Монгол залуучууд Нью-Йорк хотод #BreatheMongolia hashtag-ийн дор Монгол Улсад үхлийн аюултай агаарын бохирдлын талаар олон нийтийн анхаарлыг хандуулж, эсэргүүцлийн жагсаал зохион байгуулжээ. Энэхүү жагсаал нь дэлхийн өнцөг булан бүрт амьдарч буй Монголчууд болон дэлхийн иргэдийг нэгтгэсэн бөгөөд манай үүсгэн байгуулагчид Breathe Mongolia - Цэвэр агаарын эвсэл ашгийн бус байгууллагыг үүсгэсэн юм. Одоо Breathe Mongolia-д 10 орны агаар мандлын химич, програм хангамжийн инженер, хот төлөвлөлт, анагаах ухааны доктор, бодлогын шинжээч зэрэг олон мэргэжилтэнгүүдээс бүрдсэн сайн дурынхан ажиллаж байна.",
