feat: started about us base files
- setup routing detection on page
- setup empty component for info section
- updated language files with subnavigation

--- a/public/locales/en/about.json
+++ b/public/locales/en/about.json
@@ -3,6 +3,13 @@
     "title": "Who We Are",
     "description": "The Breathe Mongolia - Clean Air Coalition is an international team of professionals and everyday citizens, working to end Mongolia’s air pollution crisis."
   },
+  "subNavigationTabs": {
+    "aboutUs": "About Us",
+    "ourStory": "Our Story",
+    "impact": "Impact",
+    "ourTeam": "Our Team",
+    "supportUs": "Support Us"
+  },
   "ourMission": "Our Mission",
   "missionStatement": "Our mission is to arm people with the resources to end air pollution in Mongolia",
   "ourVision": "Our Vision",
