--- a/public/locales/mn/about.json
+++ b/public/locales/mn/about.json
@@ -3,6 +3,13 @@
     "title": "Бидний тухай",
     "description": "Breathe Mongolia - Цэвэр агаарын эвсэл нь Монголын агаарын бохирдлын хямралыг арилгахаар ажиллаж буй олон улсын мэргэжлийн болон идэвхтэй иргэдийн баг юм."
   },
+  "subNavigationTabs": {
+    "aboutUs": "Бидний тухай",
+    "ourStory": "Бидний түүх",
+    "impact": "хийсэн ажил",
+    "ourTeam": "Манай хамт олон",
+    "supportUs": "Биднийг дэмжих"
+  },
   "ourMission": "Бидний зорилго",
   "missionStatement": "Бидний эрхэм зорилго бол иргэдийг Монгол орны агаарын бохирдлыг бууруулах хэрэгслээр хангах явдал юм",
   "ourVision": "Алсын хараа",
