Added code from bm-custom-web

--- a/public/locales/mn/takeAction.json
+++ b/public/locales/mn/takeAction.json
@@ -53,5 +53,17 @@
     "tabTitle1": "Хаанаас авах",
     "tabTitle2": "Хаанаас авах 2",
     "tabTitle3": "Хаанаас авах 3"
+  },
+  "donate": {
+    "title": "Хандивлах",
+    "mobileTitle": "Агаарын бохирдлыг багасгахад туслах",
+    "description": "Таны өгөөмөр хандив иргэдэд агаарын бохирдлоос шалтгаалсан эрүүл мэндийн эрсдлээс хамгаалах талаар мэдлэг олгох, мөн агаарын бохирдлыг бууруулах үйлсэд зориулагдах болно.",
+    "button": "ХАНДИВЛАХ",
+    "sidebarTitle": "ХАНДИВЛАХ АРГУУД",
+    "sidebarTitleMobile": "Бусад хандивлах аргууд",
+    "seeLess": "Багасгах",
+    "donateOnetime": "Paypal-p xандивлах",
+    "donateYourcause": "Yourcause дээр ажил олгогчоор хандивлах",
+    "donateBenevity": "Benevity дээр ажил олгогчоор хандивлах",
   }
 }
