Fixed DonateSection language switch

--- a/public/locales/en/takeAction.json
+++ b/public/locales/en/takeAction.json
@@ -70,7 +70,7 @@
     "seeLess": "See less",
     "donateOnetime": "One-time donation",
     "donateYourcause": "Employer donation on Yourcause",
-    "donateBenevity": "Employer donation on Benevity",
+    "donateBenevity": "Employer donation on Benevity"
   },
   "subscribe": {
     "mobileTitle": "Connect with us!",
