--- a/public/locales/mn/takeAction.json
+++ b/public/locales/mn/takeAction.json
@@ -64,6 +64,6 @@
     "seeLess": "Багасгах",
     "donateOnetime": "Paypal-p xандивлах",
     "donateYourcause": "Yourcause дээр ажил олгогчоор хандивлах",
-    "donateBenevity": "Benevity дээр ажил олгогчоор хандивлах",
+    "donateBenevity": "Benevity дээр ажил олгогчоор хандивлах"
   }
 }
