Added DonateSection Mobile

--- a/public/locales/mn/takeAction.json
+++ b/public/locales/mn/takeAction.json
@@ -64,6 +64,7 @@
     "seeLess": "Багасгах",
     "donateOnetime": "Paypal-p xандивлах",
     "donateYourcause": "Yourcause дээр ажил олгогчоор хандивлах",
-    "donateBenevity": "Benevity дээр ажил олгогчоор хандивлах"
+    "donateBenevity": "Benevity дээр ажил олгогчоор хандивлах",
+    "disclosure": "Breathe Mongolia буюу Агаарын Харуул НҮТББ нь нийтэд ил байгаа мэдээлэл дээр суурилан агаарын бохирдлыг бууруулах болон эрүүл мэндийг хамгаалахад шаардлагатай шийдлүүдийг судлах, олж мэдэхэд туслах зорилготой. НҮТББ нь аливаа бүтээгдэхүүн болон үйлчилгээг бусдаас илүүд үзэн дэмжээгүй бөгөөд үнэн зөв гэдэгт баталгаа өгөхгүй. Хэрэглэгчдийн хийсэн сонголтоос бий болсон аливаа хариуцлага, зардал, хохирол, нөхөн төлбөр, нэхэмжлэл зэрэг бусад зүйлсэд НҮТББ ямар ч тохиолдолд хариуцлага хүлээхгүй. Бид дурдагдсан бүтээгдэхүүн болон үйлчилгээг авахдаа салбарын мэргэжилтнүүдээс зөвлөгөө авч, судалгаа хийхийг хэрэглэгчдэд зөвлөж байна."
   }
 }
