--- a/public/locales/en/pledge.json
+++ b/public/locales/en/pledge.json
@@ -1,7 +1,7 @@
 {
   "button": "take this pledge",
   "pledged": "Congratulations!",
-  "pledgeTo": "I pledge to <1>{{title}}</1>",
+  "pledgeTo": "I pledge to <span>{{title}}</span>",
   "congrats": "Congratulations! You have pledged to:",
   "tapToTakePledge": "Tap to take this pledge",
   "joined": "You and {{totalPledge}} people have taken this pledge!",
