--- a/public/locales/mn/pledge.json
+++ b/public/locales/mn/pledge.json
@@ -2,7 +2,7 @@
   "button": "Би амлаж байна",
   "pledged": "Баяр хүргэе!",
   "i": "Би",
-  "pledgeTo": "Би <1>{{title}}</1> гэж амлаж байна!",
+  "pledgeTo": "Би <span>{{title}}</span> гэж амлаж байна!",
   "congrats": "Баяр хүргэе! Таны амлалт:",
   "tapToTakePledge": "Би амлаж байна дээр дарна уу",
   "joined": "Өөр {{totalPledge}} хүн энэ амлалтыг өгсөн байна!",
