--- a/public/locales/en/takeAction.json
+++ b/public/locales/en/takeAction.json
@@ -1,4 +1,5 @@
 {
+  "additionalTitle": "Additional Resources",
   "supportUs": {
     "waysToDonate": "Ways to Donate Money",
     "donateDirectlyOn": "Donate directly on",
@@ -20,16 +21,6 @@
     "volunteerForUs": "Volunteer for Us",
     "currentVolunteersNeeded": "Current Volunteers Needed",
     "viewPosition": "View Position"
-  },
-  "pledge": {
-    "button": "take this pledge",
-    "pledged": "Congratulations!",
-    "pledgeTo": "I pledge to <1>{{title}}</1>",
-    "congrats": "Congratulations! You have pledged to:",
-    "tapToTakePledge": "Tap to take this pledge",
-    "joined": "You and {{totalPledge}} people have taken this pledge!",
-    "share": "Share Your Pledge Now!",
-    "mobileTitle": "Take This Pledge and Share with Your Network!"
   },
   "additionalResources": {
     "title": "Additional Resources"
@@ -59,7 +50,6 @@
     "mobileDescription": "Tackling air pollution starts with each and every one of us. Learn about the actions you can take to reduce your emission and protect the health of your loved ones.",
     "learnMore": "Learn More"
   },
-  "backBtnText": "Back to Take Action Home",
   "donate": {
     "title": "Donate",
     "mobileTitle": "Help reduce air pollution",
