--- a/public/locales/mn/takeAction.json
+++ b/public/locales/mn/takeAction.json
@@ -1,4 +1,5 @@
 {
+  "additionalTitle": "Нэмэлт мэдээлэл",
   "supportUs": {
     "waysToDonate": "Мөнгөн хандив өгөх аргууд",
     "donateDirectlyOn": "дээр хандив өгөх",
@@ -20,17 +21,6 @@
     "volunteerForUs": "Сайн дурын ажил",
     "currentVolunteersNeeded": "Одоогоор хэрэгцээтэй байгаа сайн дурын ажлууд:",
     "viewPosition": "Ажлын байр харах"
-  },
-  "pledge": {
-    "button": "Би амлаж байна",
-    "pledged": "Баяр хүргэе!",
-    "i": "Би",
-    "pledgeTo": "Би <1>{{title}}</1> гэж амлаж байна!",
-    "congrats": "Баяр хүргэе! Таны амлалт:",
-    "tapToTakePledge": "Би амлаж байна дээр дарна уу",
-    "joined": "Өөр {{totalPledge}} хүн энэ амлалтыг өгсөн байна!",
-    "share": "Амлалтаа бусадтай хуваалцаарай!",
-    "mobileTitle": "Амлалт өгөн бусадтай хуваалцаарай:"
   },
   "additionalResources": {
     "title": "Нэмэлт мэдээлэл"
