--- a/public/locales/mn/about.json
+++ b/public/locales/mn/about.json
@@ -36,5 +36,10 @@
   "preserveBalanceDetails": "Дэлхийн Ногоон эдийн засгийн үзүүлэлтээр (индексээр) эхний 30-д орж буй улс орнуудын нэг болох ",
   "goal10KeyWord": "Сайн засаглал",
   "buildGovernance": "бий болгох",
-  "buildGovernanceDetails": "Мэргэжлийн, тогтвортой, идэвхи оролцоотой, хөгжлийн бодлогыг бүх түвшинд хэрэгжүүлэх чадвартай мѳн авилгалаас ангид засаглал"
+  "buildGovernanceDetails": "Мэргэжлийн, тогтвортой, идэвхи оролцоотой, хөгжлийн бодлогыг бүх түвшинд хэрэгжүүлэх чадвартай мѳн авилгалаас ангид засаглал",
+  "ourTeam": {
+    "whereOurTeamIsLocated": "Манай багийн гишүүдийн байршил",
+    "featuredMembers": "Онцлох багийн гишүүд",
+    "ourTeam": "Манай баг"
+  }
 }
