--- a/public/locales/mn/about.json
+++ b/public/locales/mn/about.json
@@ -41,5 +41,12 @@
     "whereOurTeamIsLocated": "Манай багийн гишүүдийн байршил",
     "featuredMembers": "Онцлох багийн гишүүд",
     "ourTeam": "Манай баг"
+  },
+  "ourStory": {
+    "title": "Бидний түүх",
+    "ourStoryDetails": "Монгол залуучууд Нью-Йорк хотод #BreatheMongolia hashtag-ийн дор Монгол Улсад үхлийн аюултай агаарын бохирдлын талаар олон нийтийн анхаарлыг хандуулж, эсэргүүцлийн жагсаал зохион байгуулжээ. Энэхүү жагсаал нь дэлхийн өнцөг булан бүрт амьдарч буй Монголчууд болон дэлхийн иргэдийг нэгтгэсэн бөгөөд манай үүсгэн байгуулагчид Breathe Mongolia - Цэвэр агаарын эвсэл ашгийн бус байгууллагыг үүсгэсэн юм. Одоо Breathe Mongolia-д 10 орны агаар мандлын химич, програм хангамжийн инженер, хот төлөвлөлт, анагаах ухааны доктор, бодлогын шинжээч зэрэг олон мэргэжилтэнгүүдээс бүрдсэн сайн дурынхан ажиллаж байна.",
+    "moreAboutOurStory": "дэлгэрэнгүй",
+    "storiesAirPollution": "Агаарын бохирдлын тухай түүхүүд",
+    "readMoreStories": "Бусад түүхийг унших"
   }
 }
