feat: newscard changes - featurednews integration
- language cleanup
- news card updates to handle more pages
- featurednews now gets data

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,11 +1,5 @@
 {
-  "subfooter": "Stay connected:",
-  "titleExplore": "explore",
-  "title": {
-    "explore": "explore",
-    "getInvolved": "getInvolved",
-    "aboutUs": "About Us"
-  },
+  "emptyState": "This list is empty",
   "subscribe": {
     "btn": "subscribe",
     "subscribed": "Subscribed",
