--- a/public/locales/mn/common.json
+++ b/public/locales/mn/common.json
@@ -3,6 +3,8 @@
     "btn": "бүртгүүлэх",
     "subscribed": "Бүртгэгдлээ",
     "validEmail": "Имэйл хаягаа зөв оруулна уу",
+    "placeholder": "таны цахим шуудангийн хаяг...",
+    "placeholder1": "Бидний имэйл листэнд нэгдэх",
     "footerPlaceHolder": "Цахим товхимол авах имэйлээ бичээрэй"
   },
   "backBtnText": "Нүүр хуудас руу буцах",
