Refactored Support Us Section with new design

--- a/public/locales/mn/about.json
+++ b/public/locales/mn/about.json
@@ -43,6 +43,8 @@
     "ourTeam": "Манай баг"
   },
   "supportUs": {
+    "title": "Манай байгууллагын үйл ажиллагааг хандив болон сайн дурын ажлаараа дэмжээрэй",
+    "subtitle": "Таны хандив 100% агаарын бохирдлыг бууруулах, бусдын эрүүл мэндийг хамгаалах ажилд зарцуулагдах болно.",
     "waysToDonate": "Мөнгөн хандив өгөх аргууд",
     "donateDirectlyOn": "дээр хандив өгөх",
     "donate": "Хандивлах",
@@ -59,7 +61,9 @@
     "amazonSmileStepThreePart1": "Дандаа ",
     "amazonSmileStepThreePart2": "-p худалдаа хийгээрэй",
     "andBreak": "БAC",
-    "donateThroughEmployer": "Таны бидэнд өгөх хандивтай дүйцэхүйц хандивыг таны ажил олгогч нэмж өгөх боломжтой. Мөн таны ажил олгогч бидэнд шууд тэтгэлэг өгч болно. Манай байгууллага Benevity болон YouCause дээр бүртгэлтэй.",
+    "donateThroughEmp": "Таны бидэнд өгөх хандивтай дүйцэхүйц хандивыг таны ажил олгогч нэмж өгөх боломжтой. Мөн таны ажил олгогч бидэнд шууд тэтгэлэг өгч болно. Манай байгууллага Benevity болон YouCause дээр бүртгэлтэй.",
+    "donateThroughEmployer":"Мөн та ажлын байрныхаа хандив, сайн дурын Benevity, YourCause гэх мэт талбаруудад манай байгууллагыг бүртгүүлэн хандиваа 2 дахин өсгөх эсвэл сайн дурын ажлын цагаа бүртгүүлж компаниасаа манайд хандивлуулах боломжтой",
+    "volunteer": "Дэлхийн хаанаас ч шинжлэх ухаан, технологи, дизайн, бизнесийн ур чадвараараа Монголын агаарын бохирдолтой тэмцээрэй. Бидэнтэй ажиллахын 10 давуу талыг сонирхоорой",
     "volunteerForUs": "Сайн дурын ажил",
     "currentVolunteersNeeded": "Одоогоор хэрэгцээтэй байгаа сайн дурын ажлууд:",
     "viewPosition": "Ажлын байр харах"
