(WIP) News landing page (#50)
* minor: base layout and placeholders for the news page

* feat: added separate json file for language

* refactor: news page component structure

* minor: translation updates

* minor: news landing page placeholders

* feat: updated page banner to handle translation + work for news page

* fix: banner

- also changed revalidate time

* feat: newscard changes - featurednews integration

- language cleanup
- news card updates to handle more pages
- featurednews now gets data

* fix: search bar empty state + banner image

* wip: update to newscard + featurednews

* fix: home page hydration errors

* fix: hydration error with takeAction

* fix: openaq and purple air station api

* minor: add the common language pack

* fix: home page map responsiveness fix

* feat: remove banner from news landing page

+ fix: build errors

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -256,7 +256,8 @@
     "Khan Uul": "Хан Khan Uul",
     "Nalaikh": "Nalaikh"
   },
-
+  "home": {},
+  "news": {},
   "givebutter": {
     "support": "Support us"
   },
