--- a/public/locales/mng.json
+++ b/public/locales/mng.json
@@ -270,6 +270,8 @@
     "Khan Uul": "Хан Уул",
     "Nalaikh": "Налайх"
   },
+  "home": {},
+  "news": {},
   "givebutter": {
     "support": "Хандивлах"
   },
