Changed the GiveButterForm design

--- a/public/locales/en/about.json
+++ b/public/locales/en/about.json
@@ -74,5 +74,9 @@
     "moreAboutOurStory": "MORE ABOUT OUR STORY",
     "storiesAirPollution": "Stories About Air Pollution",
     "readMoreStories": "READ MORE STORIES"
+  },
+  "joinBm": {
+    "opportunities": "Open positions",
+    "applyNow": "Apply Now"
   }
 }
