--- a/public/locales/mn/about.json
+++ b/public/locales/mn/about.json
@@ -74,5 +74,9 @@
     "moreAboutOurStory": "дэлгэрэнгүй",
     "storiesAirPollution": "Агаарын бохирдлын тухай түүхүүд",
     "readMoreStories": "Бусад түүхийг унших"
+  },
+  "joinBm": {
+    "opportunities": "Нээлттэй ажлын байр",
+    "applyNow": "АНКEТ БӨГЛӨХ"
   }
 }
