--- a/public/locales/mn/footer.json
+++ b/public/locales/mn/footer.json
@@ -33,10 +33,10 @@
     "join": "Холбоо барих"
   },
   "subscribe": {
-    "btn": "бүртгүүлэх",
+    "btn": "Бүртгүүлэх",
     "subscribed": "Бүртгэгдлээ",
     "validEmail": "Имэйл хаягаа зөв оруулна уу",
-    "placeholder": "таны цахим шуудангийн хаяг...",
+    "placeholder": "Таны цахим шуудангийн хаяг...",
     "placeholder1": "Бидний имэйл листэнд нэгдэх",
     "footerPlaceHolder": "Цахим товхимол авах имэйлээ бичээрэй"
   },
