feat: givebutter modal and buttons
cleanup of other items

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -253,9 +253,7 @@
   },
   "home": {},
   "news": {},
-  "givebutter": {
-    "support": "Support us"
-  },
+  "support": "Support us",
   "error": {},
   "search": {
     "results": "search results for"
