--- a/public/locales/en/nav.json
+++ b/public/locales/en/nav.json
@@ -9,5 +9,6 @@
   "download": "Download",
   "more": "More",
   "connect": "Connect",
-  "donate": "Donate"
+  "donate": "Donate",
+  "support": "Support Us"
 }
