--- a/public/locales/mn/nav.json
+++ b/public/locales/mn/nav.json
@@ -9,5 +9,6 @@
   "protect": "ӨӨРИЙГӨӨ ХАМГААЛАХ",
   "more": "More",
   "connect": "БИДЭНТЭЙ ХОЛБОГДОХ",
-  "donate": "ХАНДИВЛАХ"
+  "donate": "ХАНДИВЛАХ",
+  "support": "Хандивлах"
 }
