feat: attempt at loading page
- cleanup: unused vars

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -21,5 +21,6 @@
     "bodyPart1": "I just pledged to",
     "bodyPart2": "People need to know about this.",
     "bodyPart3": "Thanks!"
-  }
+  },
+  "loading": "Page is loading"
 }
