--- a/public/locales/mn/common.json
+++ b/public/locales/mn/common.json
@@ -14,5 +14,6 @@
     "bodyPart1": "Сайн байна уу? Энэ маш хэрэгтэй мэдээлэл байна.",
     "bodyPart2": "",
     "bodyPart3": "Өдрөө сайхан өнгөрүүлээрэй"
-  }
+  },
+  "loading": "Хуудсыг ачаалж байна"
 }
