minor: update menu with journalism link

--- a/public/locales/en/nav.json
+++ b/public/locales/en/nav.json
@@ -10,5 +10,6 @@
   "more": "More",
   "connect": "Connect",
   "donate": "Donate",
-  "support": "Support Us"
+  "support": "Support Us",
+  "journalism": "Env Journalism"
 }
