--- a/public/locales/mn/nav.json
+++ b/public/locales/mn/nav.json
@@ -10,5 +10,6 @@
   "more": "More",
   "connect": "БИДЭНТЭЙ ХОЛБОГДОХ",
   "donate": "ХАНДИВЛАХ",
-  "support": "Хандивлах"
+  "support": "Хандивлах",
+  "journalism": "Сэтгүүлчдийн хөтөлбөр"
 }
